<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">PDF Reader</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>


    // toolbar
    <string name="toolbar_search">Search</string>
    <string name="toolbar_language">Language</string>
    <string name="toolbar_premium">Get Premium</string>
    <string name="toolbar_sort">Sort</string>
    <string name="toolbar_name">Name</string>
    <string name="toolbar_date">Date</string>
    <string name="toolbar_size">Size</string>

    <string name="language_en">English</string>
    <string name="language_vi">Vietnamese</string>


    // float add
    <string name="float_add_image">Image</string>
    <string name="float_add_scan_document">Scan document</string>

    // bottom tab
    <string name="document">Document</string>
    <string name="recently">Recent</string>
    <string name="favorite">Favorite</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="scan_document">Scan document</string>
    <string name="dialog_title">Sort</string>
    <string name="toolbar_coming_soon">Coming soon</string>
    <string name="permissions_granted">Permissions Granted</string>
    <string name="convert_button_camera">Camera</string>
    <string name="convert_button_upload">Upload</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="toolbar_convert">Convert</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="go_to_pdf_premium">Go to PDF Premium</string>
    <string name="no_ads">No Ads</string>
    <string name="all_read_document">All Read Document</string>
    <string name="convert_image_to_pdf">Convert Image to PDF</string>
    <string name="data_found">No data found</string>
    <string name="monthly">Monthly</string>
    <string name="annual">Annual</string>
    <string name="confirm">Confirm</string>
    <string name="action_file_send_email">Email</string>
    <string name="action_file_copy">Copy to</string>
    <string name="action_file_rename">Rename</string>
    <string name="action_file_delete">Delete</string>
    <string name="change_name_pdf">Rename PDF</string>
    <string name="enter_pdf_name">Enter PDF Name</string>
    <string name="double_click_to_exit">Press once again to exit!</string>
    <string name="please_permissions">Please grant the necessary permissions</string>
    <string name="setting">Setting</string>
    <string name="file_created_successfully">File created successfully</string>
    <string name="failed">Failed</string>
    <string name="please_select_photo">Please select a photo</string>
    <string name="access_granted">Access has been granted</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="file_access_denied">File access denied</string>
    <string name="grant_access">Grant access</string>
    <string name="can_not_read_file">Can\'t read file</string>
    <string name="source_file_does_not_exist">Source file does not exist</string>
    <string name="file_copied_successfully">File copied successfully</string>
    <string name="file_copy_failed">Failed to copy the file</string>
    <string name="file_source_already_exists">File source already exists</string>
    <string name="no_email_app">No email app found</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="rename_successful">Rename successful</string>
    <string name="can_t_rename_file">Can\'t rename file</string>
    <string name="please_enter_new_name">Please enter new name</string>
    <string name="delete_file">Delete file</string>
    <string name="sure_delete_this_file">Are you sure you want to delete this file?</string>
    <string name="file_deleted">File deleted</string>
    <string name="failed_delete_file">Failed to delete the file</string>
    <string name="access_all_fordel">App access all fordel</string>
    <string name="permission_denied_title">Permission Denied</string>
    <string name="permission_denied_message">Access to external storage is required for this feature. Please grant the permission in app settings.</string>
    <string name="go_to_settings">Go to Settings</string>


</resources>