<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangeLanguageActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:padding="3dp"
        android:background="@color/pdf"
        android:layout_marginBottom="7dp"
        tools:ignore="MissingConstraints" >
        <ImageView
            android:id="@+id/ivHomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:padding="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/toolbar_language"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:text="@string/language_en"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:onClick="change" />

        <RadioButton
            android:id="@+id/radioVietnam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="change"
            android:textSize="20sp"
            android:text="@string/language_vi" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>